--- a/resources/public_readmes/top_level/top_readme.Rmd
+++ b/resources/public_readmes/top_level/top_readme.Rmd
@@ -39,26 +39,29 @@ output:
 knitr::opts_chunk$set(tidy = FALSE, warning = FALSE, message = FALSE, max.print = 5)
 ```
 
-```{r echo=FALSE}
-# load libraries
-library(tidyverse)
 
-```
+# Species level resolution of female bladder microbiota from 16S rRNA amplicon sequencing
 
-This repository contains the coding resources that were used in producing the results of the manuscript divided into 4 sections.
-    
-* gathering the sequences used in the study   
-* extracting the predicted subsequences using primer annealing sites as coordinates (targeted amplicons)   
-* identification of the targeted amplicons using all classification schemes   
-* evaluation of the results  
-    
 
-This study was done in two parts. The first part computationally compares the phylogenetic resolution that is achieved by combining 4 currently available databases, 2 taxonomic classifiers, and subsequences from 3 genes into 58 classification schemes.  
+## In general
 
-The second part of the study was to validate one of the classification schemes by comparing the computational outcome with data generated from targeted amplicon sequencing of bacterial DNA obtained from urine samples.  
+This study was done in two parts. The first part computationally
+compares the phylogenetic resolution that is achieved by combining 3
+currently available databases, 2 taxonomic classifiers, and 7 subsequences
+from the 16S rRNA gene sequence into 42 classification schemes.
 
-The general workflow is illustrated below 
+The second part of the study was to validate one of the classification
+schemes by comparing the computational outcome with data generated from
+targeted amplicon sequencing of bacterial DNA obtained from urine
+samples.
 
-![](resources/md_files/vsm_only16s_activity.png)
+## File description
 
+  * `evaluation/`: code for calculating the recall, precision and F-measure of the classification schemes' results
+  * `handle_newick/`: helper functions
+  * `resources/`: resource files for the repository
+  * `sliding_window/`: code for performing the sliding window analysis of the 16S rRNA gene sequence
+  * `split_to_vr/`: code for extracting simulated amplicons of the 16S rRNA gene sequence
+  * `taxonomy/`: code for handling the assigned taxonomy from the classification schemes
+  * `testing/`: python and R tests
 
